--- a/contact.html
+++ b/contact.html
@@ -1,115 +1,103 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Coin Des Étudiants</title>
-  <link rel="stylesheet" href="contact.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Coin Des Étudiants</title>
+  <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-  <nav>
-    <div class="burger" id="burger">
-      &#9776; 
-    </div>
+  <nav>
+    <div class="burger" id="burger">
+      ☰ 
+    </div>
 
-    <div class="logo">
-      <img src="logo.png" alt="Logo">
-      <span>Coin Des Étudiants</span>
-    </div>
+    <div class="logo">
+      <img src="logo.png" alt="Logo">
+      <span>Coin Des Étudiants</span>
+    </div>
 
-    <ul class="nav-links" id="nav-links">
-      <li class="menu-header">
-        <span>Le Coin Des Étudiants</span>
-      </li>
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="apropos.html">À propos</a></li>
-      <li><a href="partenariats.html">Partenariats</a></li>
-      <li><a href="contact.html" class="active">Contact</a></li>
-      <button class="menu-cta">Télécharge l'application</button>
-    </ul>
+    <ul class="nav-links" id="nav-links">
+      <li class="menu-header">
+        <span>Le Coin Des Étudiants</span>
+      </li>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="apropos.html">À propos</a></li>
+      <li><a href="partenariats.html">Partenariats</a></li>
+      <li><a href="contact.html" class="active">Contact</a></li>
+      <button class="menu-cta">Télécharge l'application</button>
+    </ul>
 
-    <div class="cta">
-      <button class="cta-btn" onclick="window.location.href='https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03'">
-        <img src="logo-whatsapp.png" alt="WhatsApp">
-        Rejoins notre canal
-      </button>
-    </div>
-  </nav>
-  <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
-  <main>
-    <div class="page-title">
-      <h1>Contact</h1>
-      <div class="title-underline"></div>
-    </div>
-  
-    <div class="contact-layout">
-      <section class="contact-info">
-        <h2>Infos</h2>
-        <div class="map-placeholder">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d174.9628372498004!2d2.367843870776163!3d48.911474663695564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fe953a88763%3A0xde860323bf3c0db8!2sI-Engage%20Paris%208%20Saint-Denis!5e0!3m2!1sfr!2sfr!4v1765037642951!5m2!1sfr!2sfr"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <p><strong>I-Engage Paris 8 Saint Denis – 14 Rue Waldeck Rochet, 93300 Aubervilliers</strong></p>
-      </section>
-  
-      <section class="contact-form-container">
-        <h2>Formulaire</h2>
-        <form action="/submit-form" method="POST">
-          <input type="text" name="nom" placeholder="Nom et Prénom" required>
-          <input type="email" name="email" placeholder="Email / Numéro de Tél." required>
-          <select name="sujet">
-            <option value="">Sélection sujet/problème</option>
-            <option value="aide_logement">Faire un don</option>
-            <option value="aide_logement">Bénéficier d'un don</option>
-            <option value="aide_logement">Proposer un logement</option>
-            <option value="aide_logement">Demande de logement</option>
-            <option value="partenariat">Vendre un produit</option>
-            <option value="partenariat">Acheter un produit</option>
-            <option value="autre">Autre</option>
-          </select>
-          <textarea name="details" placeholder="Détails de votre demande" rows="6" required></textarea>
-          <button type="submit">Envoyer</button>
-        </form>
-      </section>
-    </div>
-  </main>
-   <footer>
-    <div class="footer-container">
-  
-      <div class="footer-section">
-        <h3>Le Coin Des Étudiants</h3>
-        <p>La plateforme solidaire dédiée aux étudiants en France.</p>
-      </div>
-  
-      <div class="footer-section">
-        <h3>Réseaux sociaux</h3>
-        <ul>
-          <li><a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03">Canal WhatsApp</a></li>
-        </ul>
-      </div>
-  
-      <div class="footer-section">
-        <h3>Contact</h3>
-        <p>Email : coindetudiants@gmail.com</p>
-      </div>
-    </div>
-    
-    <div class="footer-bottom">
-        © 2025 Le Coin Des Étudiants — Tous droits réservés
-    </div>
-  </footer>
+    <div class="cta">
+      <button class="cta-btn" onclick="window.location.href='https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03'">
+        <img src="logo-whatsapp.png" alt="WhatsApp">
+        Rejoins notre canal
+      </button>
+    </div>
+  </nav>
+  <div id="menu-overlay" class="menu-overlay" aria-hidden="true"></div>
+  <main>
+    <div class="page-title">
+      <h1>Contact</h1>
+      <div class="title-underline"></div>
+    </div>
+  
+    <div class="contact-layout">
+      <section class="contact-info">
+        <h2>Infos</h2>
+        <div class="map-placeholder">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d357.6360878735532!2d2.367814920537438!3d48.91156975124023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fe953a88763%3A0xde860323bf3c0db8!2sI-Engage%20Paris%208%20Saint-Denis!5e0!3m2!1sfr!2sfr!4v1765044104204!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  </div>
+        <p><strong>I-Engage Paris 8 Saint Denis – 14 Rue Waldeck Rochet, 93300 Aubervilliers</strong></p>
+      </section>
+  
+      <section class="contact-form-container">
+        <h2>Formulaire</h2>
+        <form action="/submit-form" method="POST">
+          <input type="text" name="nom" placeholder="Nom et Prénom" required>
+          <input type="email" name="email" placeholder="Email / Numéro de Tél." required>
+          <select name="sujet">
+            <option value="">Sélection sujet/problème</option>
+            <option value="aide_logement">Faire un don</option>
+            <option value="aide_logement">Bénéficier d'un don</option>
+            <option value="aide_logement">Proposer un logement</option>
+            <option value="aide_logement">Demande de logement</option>
+            <option value="partenariat">Vendre un produit</option>
+            <option value="partenariat">Acheter un produit</option>
+            <option value="autre">Autre</option>
+          </select>
+          <textarea name="details" placeholder="Détails de votre demande" rows="6" required></textarea>
+          <button type="submit">Envoyer</button>
+        </form>
+      </section>
+    </div>
+  </main>
+   <footer>
+    <div class="footer-container">
+  
+      <div class="footer-section">
+        <h3>Le Coin Des Étudiants</h3>
+        <p>La plateforme solidaire dédiée aux étudiants en France.</p>
+      </div>
+  
+      <div class="footer-section">
+        <h3>Réseaux sociaux</h3>
+        <ul>
+          <li><a href="https://whatsapp.com/channel/0029VbAwDzD8fewrz5ocLE03">Canal WhatsApp</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-section">
+        <h3>Contact</h3>
+        <p>Email : coindetudiants@gmail.com</p>
+      </div>
+    </div>
+    
+    <div class="footer-bottom">
+        © 2025 Le Coin Des Étudiants — Tous droits réservés
+    </div>
+  </footer>
 <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
