--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
       <section class="contact-info">
         <h2>Infos</h2>
         <div class="map-placeholder">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2622.2079568223407!2d2.3653274766455334!3d48.91143007133945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fe953a88763%3A0xde860323bf3c0db8!2sI-Engage%20Paris%208%20Saint-Denis!5e0!3m2!1sfr!2sfr!4v1765052870252!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2622.2079568223407!2d2.3653274766455334!3d48.91143007133945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fe953a88763%3A0xde860323bf3c0db8!2sI-Engage%20Paris%208%20Saint-Denis!5e0!3m2!1sfr!2sfr!4v1765052870252!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <p><strong>I-Engage Paris 8 Saint Denis – 14 Rue Waldeck Rochet, 93300 Aubervilliers</strong></p>
       </section>
@@ -101,4 +101,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
