--- a/index.html
+++ b/index.html
@@ -200,6 +200,16 @@
         <h3>Le Coin Des Étudiants</h3>
         <p>La plateforme solidaire dédiée aux étudiants en France.</p>
       </div>
+
+      <div class="footer-section footer-nav-mobile">
+        <h3>Navigation</h3>
+        <ul>
+          <li><a href="/accueil.html">Accueil</a></li>
+          <li><a href="/services.html">Services</a></li>
+          <li><a href="/dons.html">Dons</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </div>
   
       <div class="footer-section">
         <h3>Réseaux sociaux</h3>
