--- a/services.html
+++ b/services.html
@@ -518,10 +518,10 @@
       <div class="footer-section footer-nav-mobile">
         <h3>Navigation</h3>
         <ul>
-          <li><a href="/accueil.html">Accueil</a></li>
-          <li><a href="/services.html">Services</a></li>
-          <li><a href="/dons.html">Dons</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="apropos.html">A propos</a></li>
+          <li><a href="partenariats.html">Partenariats</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
 
@@ -569,33 +569,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
