--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
       <div class="footer-section footer-nav-mobile">
         <h3>Navigation</h3>
         <ul>
-          <li><a href="/accueil.html">Accueil</a></li>
-          <li><a href="/services.html">Services</a></li>
-          <li><a href="/dons.html">Dons</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="apropos.html">A propos</a></li>
+          <li><a href="partenariats.html">Partenariats</a></li>
           <li><a href="/contact.html">Contact</a></li>
         </ul>
       </div>
