--- a/apropos.html
+++ b/apropos.html
@@ -132,13 +132,13 @@
       <div class="footer-section footer-nav-mobile">
         <h3>Navigation</h3>
         <ul>
-          <li><a href="/accueil.html">Accueil</a></li>
-          <li><a href="/services.html">Services</a></li>
-          <li><a href="/dons.html">Dons</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="partenariats.html">Partenariats</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
-  
+      
       <div class="footer-section">
         <h3>Réseaux sociaux</h3>
         <ul>
@@ -159,6 +159,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
