--- a/services.html
+++ b/services.html
@@ -53,8 +53,8 @@
           <div class="don-card"
             data-title="Ensemble Nike"
             data-localisation="Rennes — Quartier Beauregard"
-            data-description="Objet : Ensemble Nike Taille S — État : Très bon état"
-            data-contact="À récupérer avant mardi / Contact : +33 7 58 65 35 25"
+            data-description="Objet : Ensemble Nike Taille S <br>État : Très bon état <br>À récupérer avant mardi "
+            data-contact="+33 7 58 65 35 25"
             data-image="ensemble-nike.jpeg">
             <img src="ensemble-nike.jpeg" alt="Ensemble Nike" class="don-img">
             <h3>Ensemble Nike</h3>
@@ -64,8 +64,8 @@
           <div class="don-card"
             data-title="Baskets Jordan"
             data-localisation="Rennes – Quartier Beauregard"
-            data-description="Objet : Baskets Jordan Gris — État : Bon état"
-            data-contact="À récupérer avant mardi / Contact : +33 7 58 65 35 25"
+            data-description="Objet : Baskets Jordan Gris <br>État : Bon état <br>À récupérer avant mardi"
+            data-contact="+33 7 58 65 35 25"
             data-image="basket-jordan.jpeg">
             <img src="basket-jordan.jpeg" alt="Baskets Jordan" class="don-img">
             <h3>Baskets Jordan</h3>
@@ -75,8 +75,8 @@
           <div class="don-card"
             data-title="Ensemble LOVE"
             data-localisation="Paris 4e"
-            data-description="Ensemble noir LOVE (haut + short) — Taille M — Très bon état"
-            data-contact="À récupérer immédiatement / Contact : +33 7 44 20 86 97"
+            data-description="Ensemble noir LOVE (haut + short) <br> Taille M <br>État : Très bon état <br>À récupérer immédiatement"
+            data-contact="+33 7 44 20 86 97"
             data-image="ensemble-noir-love.jpeg">
             <img src="ensemble-noir-love.jpeg" alt="Ensemble LOVE" class="don-img">
             <h3>Ensemble LOVE</h3>
@@ -86,8 +86,8 @@
           <div class="don-card"
             data-title="Pantalon large à carreaux"
             data-localisation="Paris – Saint-Lazare"
-            data-description="Pantalon large multicolore — Taille S — Très bon état"
-            data-contact="À récupérer immédiatement / Contact : +33 6 64 95 85 14"
+            data-description="Pantalon large multicolore <br>Taille S <br>État : Très bon état <br>À récupérer immédiatement"
+            data-contact="+33 6 64 95 85 14"
             data-image="pantalon-carreaux.jpeg">
             <img src="pantalon-carreaux.jpeg" alt="Pantalon large à carreaux" class="don-img">
             <h3>Pantalon large à carreaux</h3>
@@ -97,8 +97,8 @@
           <div class="don-card"
             data-title="Ensemble Beige"
             data-localisation="Paris 4e"
-            data-description="Ensemble beige — Taille XS"
-            data-contact="À récupérer immédiatement / Contact : +33 6 64 95 85 14"
+            data-description="Ensemble beige <br>Taille XS <br>À récupérer immédiatement"
+            data-contact="+33 6 64 95 85 14"
             data-image="ensemble-beige.jpeg">
             <img src="ensemble-beige.jpeg" alt="Ensemble Beige" class="don-img">
             <h3>Ensemble Beige</h3>
@@ -569,3 +569,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
