--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       </div>
       
       <div class="commu-cta">
-        <button href="https://forms.gle/Yvq2QRsxqzBq8SHD7" class="btn-logement">Proposer un service</button>
+        <button onclick="window.location.href='https://forms.gle/Yvq2QRsxqzBq8SHD7'" class="btn-logement">Proposer un service</button>
       </div>
     
       <p class="commu-follow-text">Suivez-nous sur nos réseaux :</p>
