--- a/apropos.html
+++ b/apropos.html
@@ -74,8 +74,9 @@
       </p>
     </div>
 
+    <!-- Vidéo youtube en préparation --> 
     <div class="apropos-video">
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID" title="Présentation vidéo" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/VIDEO_ID" title="Présentation vidéo" allowfullscreen></iframe> 
     </div>
   </div>
 
@@ -159,6 +160,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
