--- a/services.html
+++ b/services.html
@@ -53,7 +53,7 @@
           <div class="don-card"
             data-title="Ensemble Nike"
             data-localisation="Rennes — Quartier Beauregard"
-            data-description="Objet : Ensemble Nike Taille S \n État : Très bon état \n À récupérer avant mardi "
+            data-description="Objet : Ensemble Nike Taille S <br> État : Très bon état <br> À récupérer avant mardi "
             data-contact="+33 7 58 65 35 25"
             data-image="ensemble-nike.jpeg">
             <img src="ensemble-nike.jpeg" alt="Ensemble Nike" class="don-img">
@@ -64,7 +64,7 @@
           <div class="don-card"
             data-title="Baskets Jordan"
             data-localisation="Rennes – Quartier Beauregard"
-            data-description="Objet : Baskets Jordan Gris \n État : Bon état \n À récupérer avant mardi"
+            data-description="Objet : Baskets Jordan Gris <br> État : Bon état <br> À récupérer avant mardi"
             data-contact="+33 7 58 65 35 25"
             data-image="basket-jordan.jpeg">
             <img src="basket-jordan.jpeg" alt="Baskets Jordan" class="don-img">
@@ -75,7 +75,7 @@
           <div class="don-card"
             data-title="Ensemble LOVE"
             data-localisation="Paris 4e"
-            data-description="Ensemble noir LOVE (haut + short) \n Taille M \n État : Très bon état \n À récupérer immédiatement"
+            data-description="Ensemble noir LOVE (haut + short) <br> Taille M <br> État : Très bon état <br> À récupérer immédiatement"
             data-contact="+33 7 44 20 86 97"
             data-image="ensemble-noir-love.jpeg">
             <img src="ensemble-noir-love.jpeg" alt="Ensemble LOVE" class="don-img">
@@ -86,7 +86,7 @@
           <div class="don-card"
             data-title="Pantalon large à carreaux"
             data-localisation="Paris – Saint-Lazare"
-            data-description="Pantalon large multicolore \n Taille S \n État : Très bon état \n À récupérer immédiatement"
+            data-description="Pantalon large multicolore <br> Taille S <br> État : Très bon état <br> À récupérer immédiatement"
             data-contact="+33 6 64 95 85 14"
             data-image="pantalon-carreaux.jpeg">
             <img src="pantalon-carreaux.jpeg" alt="Pantalon large à carreaux" class="don-img">
@@ -97,7 +97,7 @@
           <div class="don-card"
             data-title="Ensemble Beige"
             data-localisation="Paris 4e"
-            data-description="Ensemble beige \n Taille XS \n À récupérer immédiatement"
+            data-description="Ensemble beige <br> Taille XS <br> À récupérer immédiatement"
             data-contact="+33 6 64 95 85 14"
             data-image="ensemble-beige.jpeg">
             <img src="ensemble-beige.jpeg" alt="Ensemble Beige" class="don-img">
@@ -569,6 +569,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
