--- a/services.html
+++ b/services.html
@@ -121,7 +121,7 @@
                data-title="Résidence étudiante – Porcheville (78)"
                data-localisation="Île-de-France, Porcheville (78440) – 10 min de Mantes-la-Jolie"
                data-description="Coin des Étudiants, en collaboration avec nos partenaires, vous propose près de 50 logements étudiants à Porcheville (78), à seulement 10 min en train de Mantes-la-Jolie (ligne J, direction Saint-Lazare).<br><br>✨ Formules disponibles :<br>• 🛏️ Chambre single (9–10 m²) → 750 €/mois<br>• 🛏️ Chambre double (12–16 m²) → 500 €/personne/mois<br>• 🛏️ Chambre triple (21 m²) → 400 €/personne/mois<br><br>📦 Charges incluses : eau, électricité, Wi-Fi, nettoyage des chambres et douches.<br>🚿 Douches partagées par palier.<br>🍽️ Restaurant solidaire : 7 €/jour pour 3 repas.<br>🛋️ Espaces partagés avec micro-ondes, TV, jeux et salons de détente."
-               data-contact="">
+               data-contact="Non renseigné">
             <img src="logement-porcheville.jpeg" alt="Porcheville">
             <h3>Résidence étudiante – Porcheville (78)</h3>
             <p class="localisation">📍 Île-de-France, Porcheville (78440) – 10 min de Mantes-la-Jolie</p>
@@ -569,6 +569,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
